--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,10 @@
         "@typescript-eslint/ban-ts-comment": "off",
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/no-inferrable-types": "off",
-        "@typescript-eslint/no-var-requires": "off"
+        "@typescript-eslint/no-var-requires": "off",
+        "@typescript-eslint/no-explicit-any": "off",
+        "require-await": "warn",
+        "require-yield": "warn"
     },
     "reportUnusedDisableDirectives": true
 }
