--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
         // "useDefineForClassFields": true,                  /* Emit ECMAScript-standard-compliant class fields. */
         /* Modules */
         "module": "ES2022" /* Specify what module code is generated. */,
-        // "rootDir": "./",                                  /* Specify the root folder within your source files. */
+        "rootDir": "./src" /* Specify the root folder within your source files. */,
         "moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */,
         // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
         // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
@@ -43,13 +43,14 @@
         "checkJs": true /* Enable error reporting in type-checked JavaScript files. */,
         "maxNodeModuleJsDepth": 3 /* Specify the maximum folder depth used for checking JavaScript files from `node_modules`. Only applicable with `allowJs`. */,
         /* Emit */
-        "sourceMap": false /* Create source map files for emitted JavaScript files. */,
+        "sourceMap": true /* Create source map files for emitted JavaScript files. */,
+        "inlineSources": true /* Include source code in the sourcemaps inside the emitted JavaScript. */,
         "declaration": true /* Generate .d.ts files from TypeScript and JavaScript files in your project. */,
-        "declarationMap": false /* Create sourcemaps for d.ts files. */,
+        "declarationMap": true /* Create sourcemaps for d.ts files. */,
         // "emitDeclarationOnly": true,                      /* Only output d.ts files and not JavaScript files. */
         // "outFile": "./dist/main.js", /* Specify a file that bundles all outputs into one JavaScript file. If `declaration` is true, also designates a file that bundles all .d.ts output. */
         "outDir": "./dist/" /* Specify an output folder for all emitted files. */,
-        "removeComments": true /* Disable emitting comments. */,
+        "removeComments": false /* Disable emitting comments. */,
         // "noEmit": true,                                   /* Disable emitting files from a compilation. */
         // "importHelpers": true,                            /* Allow importing helper functions from tslib once per project, instead of including them per-file. */
         "importsNotUsedAsValues": "remove" /* Specify emit/checking behavior for imports that are only used for types */,
@@ -57,7 +58,6 @@
         // "sourceRoot": "./src", /* Specify the root path for debuggers to find the reference source code. */
         // "mapRoot": "",                                    /* Specify the location where debugger should locate map files instead of generated locations. */
         // "inlineSourceMap": true,                          /* Include sourcemap files inside the emitted JavaScript. */
-        // "inlineSources": true,                            /* Include source code in the sourcemaps inside the emitted JavaScript. */
         // "emitBOM": true,                                  /* Emit a UTF-8 Byte Order Mark (BOM) in the beginning of output files. */
         // "newLine": "crlf",                                /* Set the newline character for emitting files. */
         // "stripInternal": true,                            /* Disable emitting declarations that have `@internal` in their JSDoc comments. */
@@ -67,7 +67,7 @@
         // "declarationDir": "./",                           /* Specify the output directory for generated declaration files. */
         // "preserveValueImports": true,                     /* Preserve unused imported values in the JavaScript output that would otherwise be removed. */
         /* Interop Constraints */
-        // "isolatedModules": true,                          /* Ensure that each file can be safely transpiled without relying on other imports. */
+        "isolatedModules": false /* Ensure that each file can be safely transpiled without relying on other imports. */,
         "allowSyntheticDefaultImports": true /* Allow 'import x from y' when a module doesn't have a default export. */,
         "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables `allowSyntheticDefaultImports` for type compatibility. */,
         // "preserveSymlinks": true,                         /* Disable resolving symlinks to their realpath. This correlates to the same flag in node. */
