--- a/package.json
+++ b/package.json
@@ -40,6 +40,14 @@
         "prettier": "^2.6.0",
         "typescript": "^4.6.2"
     },
+    "extensionDependencies": [
+        "esbenp.prettier-vscode",
+        "editorconfig.editorconfig",
+        "dbaeumer.vscode-eslint"
+    ],
+    "engines": {
+        "node": ">=16.14.0"
+    },
     "lint-staged": {
         "(*.[tj]s?(x))|(*.flow)|(*.json)|(*.?(s)css)|(*.less)|(*.html)|(*.vue)|(*.handlebars)|(*.md)|(*.yml)": [
             "./node_modules/.bin/prettier --config .prettierrc --ignore-path .prettierignore --write"
