--- a/package.json
+++ b/package.json
@@ -5,16 +5,23 @@
     "main": "src/main.ts",
     "types": "src/main.d.ts",
     "scripts": {
-        "prepare": "./node_modules/.bin/husky install",
+        "prepare": "./node_modules/.bin/husky install && $SHELL -c '[ -s \"$HOME/.nvm/nvm.sh\" ] && \\. \"$HOME/.nvm/nvm.sh\"'",
         "lint": "./node_modules/.bin/eslint --config .eslintrc.json .",
-        "lint-fix": "./node_modules/.bin/eslint --config .eslintrc.json --fix .",
+        "lint:fix": "./node_modules/.bin/eslint --config .eslintrc.json --fix .",
         "format": "./node_modules/.bin/prettier --config .prettierrc --ignore-path .prettierignore -c .",
-        "format-fix": "./node_modules/.bin/prettier --config .prettierrc --ignore-path .prettierignore --write .",
+        "format:fix": "./node_modules/.bin/prettier --config .prettierrc --ignore-path .prettierignore --write .",
         "check": "./node_modules/.bin/tsc -p tsconfig.json --noEmit",
-        "start": "node ./dist/main.js",
-        "build": "rm -rf ./dist/* && ./node_modules/.bin/tsc -p tsconfig.json --emitDeclarationOnly && $SHELL -c '[ -s \"$HOME/.nvm/nvm.sh\" ] && \\. \"$HOME/.nvm/nvm.sh\" && ESBUILD_TARGET=node$(nvm version-remote $(cat .nvmrc) | sed \"s/v//\") ./node_modules/.bin/esbuild --tsconfig=./tsconfig.json --bundle --minify --tree-shaking=true --platform=node --target=$ESBUILD_TARGET --outfile=./dist/main.js .'",
-        "try": "rm -rf ./dist/* && $SHELL -c '[ -s \"$HOME/.nvm/nvm.sh\" ] && \\. \"$HOME/.nvm/nvm.sh\" && ESBUILD_TARGET=node$(nvm version-remote $(cat .nvmrc) | sed \"s/v//\") ./node_modules/.bin/esbuild --tsconfig=./tsconfig.json --bundle --tree-shaking=false --platform=node --target=$ESBUILD_TARGET --outfile=./dist/main.js ./src/main.ts && node ./dist/main.js'",
-        "debug": "./node_modules/.bin/nodemon --allow-overwrite --exec \"rm -rf ./dist/* && $SHELL -c '[ -s \"$HOME/.nvm/nvm.sh\" ] && \\. \"$HOME/.nvm/nvm.sh\" && ESBUILD_TARGET=node$(nvm version-remote $(cat .nvmrc) | sed \"s/v//\") ./node_modules/.bin/esbuild --tsconfig=./tsconfig.json --bundle --sourcemap --tree-shaking=false --platform=node --target=$ESBUILD_TARGET --outfile=./dist/main.js ./src/main.ts && node --enable-source-maps ./dist/main.js'\""
+        "cleanup": "rm -rf ./dist && mkdir ./dist",
+        "build:debug": "npm run cleanup && ESBUILD_TARGET=node$(nvm version $(cat .nvmrc) | sed \"s/v//\") ./node_modules/.bin/esbuild --tsconfig=./tsconfig.json --bundle --sourcemap --tree-shaking=false --platform=node --target=$ESBUILD_TARGET --outfile=./dist/main.js ./src/main.ts",
+        "start:debug": "node --enable-source-maps ./dist/main.js",
+        "debug": "./node_modules/.bin/nodemon --allow-overwrite --exec \"npm run build:debug && npm run start:debug\"",
+        "build:release": "npm run check && npm run cleanup && ESBUILD_TARGET=node$(nvm version $(cat .nvmrc) | sed \"s/v//\") ./node_modules/.bin/esbuild --tsconfig=./tsconfig.json --bundle --minify --tree-shaking=true --platform=node --target=$ESBUILD_TARGET --outfile=./dist/main.js ./src/main.ts",
+        "start:release": "node ./dist/main.js",
+        "release": "npm run build:release && npm run start:release",
+        "test": "./node_modules/.bin/jest -c jest.config.js",
+        "test:unit": "./node_modules/.bin/jest -c jest.config.js --selectProjects unit",
+        "test:integration": "./node_modules/.bin/jest -c jest.config.js --selectProjects integration",
+        "test:e2e": "./node_modules/.bin/jest -c jest.config.js --selectProjects e2e"
     },
     "repository": {
         "type": "git",
@@ -27,18 +34,22 @@
     },
     "homepage": "https://github.com/rmc-coma/NodeJS-Boilerplate-lts-Gallium-ES2022#readme",
     "devDependencies": {
-        "@types/node": "^17.0.21",
-        "@typescript-eslint/eslint-plugin": "^5.15.0",
-        "@typescript-eslint/parser": "^5.15.0",
-        "esbuild": "^0.14.27",
-        "eslint": "^8.11.0",
+        "@types/jest": "^28.1.6",
+        "@types/node": "^18.0.6",
+        "@typescript-eslint/eslint-plugin": "^5.30.7",
+        "@typescript-eslint/parser": "^5.30.7",
+        "esbuild": "^0.14.49",
+        "eslint": "^8.20.0",
         "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-prettier": "^4.0.0",
-        "husky": "^7.0.4",
-        "lint-staged": "^12.3.6",
-        "nodemon": "^2.0.15",
-        "prettier": "^2.6.0",
-        "typescript": "^4.6.2"
+        "eslint-plugin-jest": "^26.6.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "husky": "^8.0.1",
+        "jest": "^28.1.3",
+        "lint-staged": "^13.0.3",
+        "nodemon": "^2.0.19",
+        "prettier": "^2.7.1",
+        "ts-jest": "^28.0.7",
+        "typescript": "^4.7.4"
     },
     "extensionDependencies": [
         "esbenp.prettier-vscode",
@@ -46,14 +57,14 @@
         "dbaeumer.vscode-eslint"
     ],
     "engines": {
-        "node": ">=16.14.0"
+        "node": ">=16.16.0"
     },
     "lint-staged": {
         "(*.[tj]s?(x))|(*.flow)|(*.json)|(*.?(s)css)|(*.less)|(*.html)|(*.vue)|(*.handlebars)|(*.md)|(*.yml)": [
             "./node_modules/.bin/prettier --config .prettierrc --ignore-path .prettierignore --write"
         ],
         "*.[tj]s?(x)": [
-            "./node_modules/.bin/eslint --config .eslintrc.json --fix"
+            "./node_modules/.bin/eslint --config .eslintrc.json --max-warnings 1 --fix"
         ]
     }
 }
