--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,12 +3,15 @@
         "es6": true,
         "worker": true,
         "node": true,
-        "es2022": true
+        "es2022": true,
+        "jest": true
     },
     "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
-        "plugin:prettier/recommended"
+        "plugin:prettier/recommended",
+        "plugin:jest/recommended",
+        "plugin:jest/style"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -16,7 +19,7 @@
         "sourceType": "module"
     },
     "ignorePatterns": ["node_modules", "dist", "build"],
-    "plugins": ["@typescript-eslint", "prettier"],
+    "plugins": ["@typescript-eslint", "prettier", "jest"],
     "rules": {
         "prettier/prettier": [
             "warn",
